--- a/fpga/vivado/cwhusky.runs/impl_1/cwhusky_top.ltx
+++ b/fpga/vivado/cwhusky.runs/impl_1/cwhusky_top.ltx
@@ -965,7 +965,8 @@
                                 "nets": [
                                     {
                                         "name": "oadc/U_fifo/reset_1",
-                                        "isBus": false
+                                        "isBus": false,
+                                        "parentNetId": 55
                                     }
                                 ]
                             },
@@ -1184,7 +1185,7 @@
                                 "portIndex": 9,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/adcfifo_wr_en",
+                                        "name": "oadc/U_fifo/downsample_wr_en",
                                         "isBus": false
                                     }
                                 ]
@@ -1355,6 +1356,226 @@
                                         "isBus": false
                                     }
                                 ]
+                            },
+                            {
+                                "name": "probe17",
+                                "id": 63,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 17,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/adc_capture_go",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe18",
+                                "id": 64,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 18,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/adc_capture_stop",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe19",
+                                "id": 65,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": true,
+                                "leftIndex": 0,
+                                "rightIndex": 11,
+                                "portIndex": 19,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/presample_counter",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[11]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[10]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[9]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[8]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[7]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[6]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[5]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[4]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[3]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[2]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[1]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/presample_counter[0]"
+                                            }
+                                        ]
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe20",
+                                "id": 66,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": true,
+                                "leftIndex": 0,
+                                "rightIndex": 11,
+                                "portIndex": 20,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/sample_counter",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[11]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[10]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[9]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[8]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[7]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[6]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[5]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[4]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[3]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[2]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[1]"
+                                            },
+                                            {
+                                                "name": "oadc/U_fifo/sample_counter[0]"
+                                            }
+                                        ]
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe21",
+                                "id": 67,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 21,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/state_idle",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe22",
+                                "id": 68,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 22,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/state_presamp_filling",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe23",
+                                "id": 69,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 23,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/state_presamp_full",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe24",
+                                "id": 70,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 24,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/state_triggered",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe25",
+                                "id": 71,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 25,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/state_done",
+                                        "isBus": false
+                                    }
+                                ]
                             }
                         ]
                     },
@@ -1372,7 +1593,7 @@
                         "pins": [
                             {
                                 "name": "probe0",
-                                "id": 63,
+                                "id": 72,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1382,13 +1603,14 @@
                                 "nets": [
                                     {
                                         "name": "oadc/U_fifo/reset",
-                                        "isBus": false
+                                        "isBus": false,
+                                        "parentNetId": 140
                                     }
                                 ]
                             },
                             {
                                 "name": "probe1",
-                                "id": 64,
+                                "id": 73,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -1514,7 +1736,7 @@
                             },
                             {
                                 "name": "probe2",
-                                "id": 65,
+                                "id": 74,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1530,7 +1752,7 @@
                             },
                             {
                                 "name": "probe3",
-                                "id": 66,
+                                "id": 75,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1546,7 +1768,7 @@
                             },
                             {
                                 "name": "probe4",
-                                "id": 67,
+                                "id": 76,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -1672,7 +1894,7 @@
                             },
                             {
                                 "name": "probe5",
-                                "id": 68,
+                                "id": 77,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1688,7 +1910,7 @@
                             },
                             {
                                 "name": "probe6",
-                                "id": 69,
+                                "id": 78,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1704,7 +1926,7 @@
                             },
                             {
                                 "name": "probe7",
-                                "id": 70,
+                                "id": 79,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1720,7 +1942,7 @@
                             },
                             {
                                 "name": "probe8",
-                                "id": 71,
+                                "id": 80,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1736,7 +1958,7 @@
                             },
                             {
                                 "name": "probe9",
-                                "id": 72,
+                                "id": 81,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1752,7 +1974,7 @@
                             },
                             {
                                 "name": "probe10",
-                                "id": 73,
+                                "id": 82,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1767,339 +1989,66 @@
                                 ]
                             }
                         ]
-                    },
+                    }
+                ],
+                "parent_nets": [
                     {
-                        "type": "ILA_V3",
-                        "name": "oadc/U_reg_openadc/U_ila_usb",
-                        "spec": "labtools_ila_v6",
-                        "ipName": "ila",
-                        "core_location": {
-                            "user_chain": 1,
-                            "slave_index": 3,
-                            "bscan_switch_index": 0
-                        },
-                        "uuid": "95201B687A16503AA1B613F472CBD467",
-                        "pins": [
+                        "id": 55,
+                        "name": "oadc/U_reg_openadc/SR[0]",
+                        "state_reg": [
                             {
-                                "name": "probe0",
-                                "id": 74,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 0,
-                                "nets": [
+                                "name": "oadc/U_fifo/FSM_sequential_state_reg[0]",
+                                "states": [
                                     {
-                                        "name": "oadc/U_reg_openadc/reset_o_1",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe1",
-                                "id": 75,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 1,
-                                "nets": [
+                                        "name": "pS_IDLE",
+                                        "val": "000"
+                                    },
                                     {
-                                        "name": "oadc/U_reg_openadc/reset_o",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe2",
-                                "id": 76,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 2,
-                                "nets": [
+                                        "name": "pS_PRESAMP_FILLING",
+                                        "val": "001"
+                                    },
                                     {
-                                        "name": "oadc/U_reg_openadc/reset_fromreg",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe3",
-                                "id": 77,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": true,
-                                "leftIndex": 0,
-                                "rightIndex": 7,
-                                "portIndex": 3,
-                                "nets": [
+                                        "name": "pS_PRESAMP_FULL",
+                                        "val": "010"
+                                    },
                                     {
-                                        "name": "oadc/U_reg_openadc/registers_echo",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/U_reg_openadc/registers_echo[7]"
-                                            },
-                                            {
-                                                "name": "oadc/U_reg_openadc/registers_echo[6]"
-                                            },
-                                            {
-                                                "name": "oadc/U_reg_openadc/registers_echo[5]"
-                                            },
-                                            {
-                                                "name": "oadc/U_reg_openadc/registers_echo[4]"
-                                            },
-                                            {
-                                                "name": "oadc/U_reg_openadc/registers_echo[3]"
-                                            },
-                                            {
-                                                "name": "oadc/U_reg_openadc/registers_echo[2]"
-                                            },
-                                            {
-                                                "name": "oadc/U_reg_openadc/registers_echo[1]"
-                                            },
-                                            {
-                                                "name": "oadc/U_reg_openadc/registers_echo[0]"
-                                            }
-                                        ]
+                                        "name": "pS_TRIGGERED",
+                                        "val": "011"
+                                    },
+                                    {
+                                        "name": "pS_DONE",
+                                        "val": "100"
                                     }
                                 ]
                             }
                         ]
                     },
                     {
-                        "type": "ILA_V3",
-                        "name": "oadc/genclocks/U_reg_mmcm_drp/U_ila_drp",
-                        "spec": "labtools_ila_v6",
-                        "ipName": "ila",
-                        "core_location": {
-                            "user_chain": 1,
-                            "slave_index": 4,
-                            "bscan_switch_index": 0
-                        },
-                        "uuid": "6EA1D1A75C9052858C7181E50B32B858",
-                        "pins": [
+                        "id": 140,
+                        "name": "oadc/U_reg_openadc/SR[0]",
+                        "state_reg": [
                             {
-                                "name": "probe0",
-                                "id": 78,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": true,
-                                "leftIndex": 0,
-                                "rightIndex": 6,
-                                "portIndex": 0,
-                                "nets": [
+                                "name": "oadc/U_fifo/FSM_sequential_state_reg[0]",
+                                "states": [
                                     {
-                                        "name": "oadc/genclocks/U_reg_mmcm_drp/drp_addr",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_addr[6]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_addr[5]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_addr[4]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_addr[3]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_addr[2]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_addr[1]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_addr[0]"
-                                            }
-                                        ]
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe1",
-                                "id": 79,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 1,
-                                "nets": [
+                                        "name": "pS_IDLE",
+                                        "val": "000"
+                                    },
                                     {
-                                        "name": "oadc/genclocks/U_reg_mmcm_drp/drp_den",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe2",
-                                "id": 80,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": true,
-                                "leftIndex": 0,
-                                "rightIndex": 15,
-                                "portIndex": 2,
-                                "nets": [
+                                        "name": "pS_PRESAMP_FILLING",
+                                        "val": "001"
+                                    },
                                     {
-                                        "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[15]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[14]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[13]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[12]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[11]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[10]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[9]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[8]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[7]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[6]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[5]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[4]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[3]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[2]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[1]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_din[0]"
-                                            }
-                                        ]
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe3",
-                                "id": 81,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": true,
-                                "leftIndex": 0,
-                                "rightIndex": 15,
-                                "portIndex": 3,
-                                "nets": [
+                                        "name": "pS_PRESAMP_FULL",
+                                        "val": "010"
+                                    },
                                     {
-                                        "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[15]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[14]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[13]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[12]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[11]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[10]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[9]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[8]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[7]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[6]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[5]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[4]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[3]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[2]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[1]"
-                                            },
-                                            {
-                                                "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dout[0]"
-                                            }
-                                        ]
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe4",
-                                "id": 82,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 4,
-                                "nets": [
+                                        "name": "pS_TRIGGERED",
+                                        "val": "011"
+                                    },
                                     {
-                                        "name": "oadc/genclocks/U_reg_mmcm_drp/drp_drdy",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe5",
-                                "id": 83,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 5,
-                                "nets": [
-                                    {
-                                        "name": "oadc/genclocks/U_reg_mmcm_drp/drp_dwe",
-                                        "isBus": false
+                                        "name": "pS_DONE",
+                                        "val": "100"
                                     }
                                 ]
                             }
