Cleanup CW-lite/pro segmenting logic.
(Husky segmenting is done completely differently.)

--- a/fpga/vivado/cwhusky.runs/impl_no_ilas/cwhusky_top.ltx
+++ b/fpga/vivado/cwhusky.runs/impl_no_ilas/cwhusky_top.ltx
@@ -721,7 +721,7 @@
                                 "portIndex": 11,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/p_3_in17_in",
+                                        "name": "oadc/U_fifo/<const0>",
                                         "isBus": false
                                     }
                                 ]
